--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "authors": [
     "Tobias Reich <tobias@electerious.com>"
   ],
-  "description": "Standalone parallax scrolling for mobile and desktop with CSS variables.",
+  "description": "Standalone parallax scrolling for mobile and desktop with CSS variables",
   "main": [
     "dist/basicScroll.min.css",
     "dist/basicScroll.min.js"
