--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "authors": [
     "Tobias Reich <tobias@electerious.com>"
   ],
-  "description": "Standalone parallax scrolling for mobile and desktop with CSS variables.",
+  "description": "Standalone parallax scrolling for mobile and desktop with CSS variables",
   "main": "dist/basicScroll.min.js",
   "keywords": [],
   "scripts": {
