--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "eases": "^1.0.8",
-    "immutable": "^3.8.1",
+    "lodash.clonedeep": "^4.5.0",
     "parse-unit": "^1.0.1"
   }
 }
