--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "basicscroll",
   "moduleName": "basicScroll",
-  "version": "1.3.0",
+  "version": "2.0.0-0",
   "authors": [
     "Tobias Reich <tobias@electerious.com>"
   ],
