--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   ],
   "devDependencies": {
     "@electerious/basictasks": "4.0.0",
+    "@types/eases": "1.0.0",
     "gulp": "^3.9.1"
   },
   "dependencies": {
